--- a/templates/main/product_detail.html
+++ b/templates/main/product_detail.html
@@ -10,9 +10,10 @@
                 <h3>
                     <a href=""></a></h5>
                     <h4>Description:</h4>
+                    <h6>{{ product.description }}</h6>
                     <a href=""></a>
                     <h3>{{ product.name }}</h3></br>
-                    <h3>${{ product.price }}</h3></br>
+                    <h3>{{ product.price }} сом</h3></br>
                     <button data-product={{ product.id }} data-action="add"
                             class="btn btn-outline-secondary add-btn update-cart">
                         Add to Cart
@@ -24,8 +25,12 @@
     <div class="container">
         <form action="{% url 'add_review' product.pk %}" method="post">
             {% csrf_token %}
-            {{ form.text }}
-            <input type="submit" value="Send">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Text</label>
+                {{ form.text }}
+                <small id="emailHelp" class="form-text text-muted">Type your comment....</small>
+            </div>
+            <input type="submit" value="Submit" class="btn btn-primary">
         </form>
         <div class="row">
             {% for review in product.reviews.all %}
