--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_ul }}
         <input type="submit" value="SignUp">
     </form>
 {% endblock %}
