--- a/templates/user/update.html
+++ b/templates/user/update.html
@@ -1,28 +1,45 @@
 {% extends 'main/main.html' %}
 {% load static %}
 {% block content %}
-    <form action="" method="post">
+    <form class="update_profile">
         {% csrf_token %}
         <div class="form-group">
             <label for="exampleInputEmail1">First name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1"
+            <input type="text" name="first_name" class="form-control" id="exampleFormControlInput1"
                    value="{{ current_user.first_name }}">
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">Last name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1"
+            <input type="text" name="last_name" class="form-control" id="exampleFormControlInput1"
                    value="{{ current_user.last_name }}">
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1"
+            <input type="text" name="username" class="form-control" id="exampleFormControlInput1"
                    value="{{ current_user.username }}">
         </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Avatar</label>
-            <input type="file" class="form-control" id="exampleFormControlInput1"
-                   value="{{ current_user.avatar }}">
-        </div>
-        <input type="submit" value="Submit" class="btn btn-success update_button">
+        {#        <div class="form-group">#}
+        {#            <label for="exampleInputEmail1">Avatar</label>#}
+        {#            <input type="file" class="form-control" id="exampleFormControlInput1"#}
+        {#                   value="{{ current_user.avatar }}">#}
+        {#        </div>#}
+        <button class="btn btn-success update_button">Submit</button>
     </form>
 {% endblock %}
+<script type="text/javascript">
+    $('.update_button').on('click', function () {
+        $.ajax({
+            url: '/user/update/',
+            method: 'POST',
+            data: $('.update_profile').serialize(),
+            beforeSend: function () {
+                // things to do before submit
+            },
+            success: function (response) {
+                alert(response)
+            }
+        });
+        return false;
+
+    });
+</script>
