token obtain and refresh

--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -103,4 +103,6 @@
 {#        crossorigin="anonymous"></script>#}
 <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
 </body>
+{% block extrajs %}
+{% endblock %}
 </html>
